// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly in mobile unit is inches 1`] = `
<div>
  <div
    class="object-panel-item"
    id="rounded-corner"
  >
    <div
      class="main"
    >
      <button
        class="adm-button adm-button-default adm-button-fill-outline adm-button-mini adm-button-shape-rounded number-item"
        type="button"
      >
        <span>
          0
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      Rounded corner
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile unit is not inches 1`] = `
<div>
  <div
    class="object-panel-item"
    id="rounded-corner"
  >
    <div
      class="main"
    >
      <button
        class="adm-button adm-button-default adm-button-fill-outline adm-button-mini adm-button-shape-rounded number-item"
        type="button"
      >
        <span>
          1
        </span>
      </button>
    </div>
    <div
      class="label"
    >
      Rounded corner
    </div>
  </div>
</div>
`;

exports[`should render correctly unit is inches 1`] = `
<div>
  <div>
    <div
      class="rounded-corner"
    >
      <div
        class="label"
        title="Rounded corner"
      >
        <svgr-url />
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="0.0000"
        />
        <span
          class="unit"
        >
          in
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly unit is not inches 1`] = `
<div>
  <div>
    <div
      class="rounded-corner"
    >
      <div
        class="label"
        title="Rounded corner"
      >
        <svgr-url />
      </div>
      <div
        class="option-input ui ui-control-unit-input-v2"
      >
        <input
          step="1"
          type="text"
          value="1.00"
        />
        <span
          class="unit"
        >
          mm
        </span>
      </div>
    </div>
  </div>
</div>
`;
